--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lodash.map": "^4.6.0",
     "moment": "^2.24.0",
     "node-sass": "^4.9.3",
+    "prop-types": "^15.6.2",
     "react-bootstrap": "^0.32.4",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
